--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campionamento</title>
     <div id="arrayNum"></div>
+    <button onclick="gioca()" >INVIA</button>
     
 </head>
 <body>
