--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campionamento</title>
-    <div id="arrayNum"></div>
-    <button onclick="gioca()" >INVIA</button>
+    <div id="print"></div>
     
 </head>
 <body>
