--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campionamento</title>
-    <div id="print"></div>
     
 </head>
 <body>
+    <div id="print">Il tuo punteggio è : </div>
+    <button onclick="gioca()" >GIOCAAAA</button>
     <script src="./script.js"></script>
 </body>
 </html>
