--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    <div id="print">Il tuo punteggio è : </div>
+    <div id="print"> </div>
     <button onclick="gioca()" >GIOCAAAA</button>
     <script src="./script.js"></script>
 </body>
