--- a/bonus/bonus.html
+++ b/bonus/bonus.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campionamento</title>
-    
+    <title>bonus</title>
 </head>
 <body>
-    <div id="print">  </div>
-    <button onclick="gioca()" >GIOCAAAA</button>
-    <script src="./script.js"></script>
+    <div id="print"></div>
+    <button onclick="gioca()">Gioca</button>
+    <script src="./script-bonus.js"></script>
 </body>
 </html>
